--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
       <?!= include('views/partials/hourtypes'); ?>
       <?!= include('views/partials/deductions'); ?>
       <?!= include('views/partials/bas'); ?>
+      <?!= include('views/partials/annualviews'); ?>
       <?!= include('views/partials/settings'); ?>
     </main>
     <?!= include('views/partials/scripts'); ?>
